--- a/jenkins-docker/docker-compose.yml
+++ b/jenkins-docker/docker-compose.yml
@@ -24,8 +24,9 @@ services:
     restart: unless-stopped
     privileged: true
     volumes:
-      - docker-certs-ca:/certs/ca
-      - docker-certs-client:/certs/client
+      - /data/jenkins_home:/var/jenkins_home
+      - /var/run/docker.sock:/var/run/docker.sock
+      - /usr/bin/docker:/usr/bin/docker
     networks:
       - jenkins-network
 
