--- a/jenkins-docker/docker-compose.yml
+++ b/jenkins-docker/docker-compose.yml
@@ -24,9 +24,8 @@ services:
     restart: unless-stopped
     privileged: true
     volumes:
-      - /data/jenkins_home:/var/jenkins_home
-      - /var/run/docker.sock:/var/run/docker.sock
-      - /usr/bin/docker:/usr/bin/docker
+      - docker-certs-ca:/certs/ca
+      - docker-certs-client:/certs/client
     networks:
       - jenkins-network
 
